fixed scrollbar problem

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body{
 /*GREEN BOX*/
 
 .box{
-	width: 100vw;
+	width: 100%;
+	float: left;
 }
 
 .titleBox{
